@@ -2,13 +2,24 @@
     ApplicationDescription = "A Dict client for GNUstep";
     ApplicationIcon = dict.png;
     ApplicationName = DictionaryReader;
-    ApplicationRelease = 0.1;
+    ApplicationRelease = 0.2;
     Authors = (
-	"Guenther Noack <guenther@unix-ag.uni-kl.de>"
+	"Guenther Noack <guenther@unix-ag.uni-kl.de>",
+	"Chris B. Vetter"
     );
     Copyright = "Copyright (C) 2006 Guenther Noack";
     CopyrightDescription = "Released under the terms of the GNU General Public Licence.";
     NSIcon = dict.png;
     NSTypes = (
+    );
+    NSServices = (
+      {
+        NSPortName = DictionaryReader;
+        NSMessage = lookupInDictionary;
+        NSSendTypes = (NSStringPboardType);
+        NSMenuItem = {
+          default = "Look Up in Dictionary";
+         };
+      }
     );
 }
